chore(fix): defer ga-script

--- a/src/app.html
+++ b/src/app.html
@@ -37,7 +37,7 @@
 			});
 		</script>
 
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-LLGJWF9DHW"></script>
+		<script src="https://www.googletagmanager.com/gtag/js?id=G-LLGJWF9DHW" defer></script>
 		<script nonce="%sveltekit.nonce%">
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
