--- a/src/app.html
+++ b/src/app.html
@@ -36,6 +36,12 @@
 			gtag('config', 'G-LLGJWF9DHW');
 		</script>
 
+		<link
+			rel="preload"
+			href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap"
+			as="style"
+		/>
+
 		%sveltekit.head%
 	</head>
 
