--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 
 		<script lang="ts" nonce="%sveltekit.nonce%">
 			document.documentElement.classList.add('dark');
-			localStorage.setItem('darkMode', 'true'); 
+			localStorage.setItem('darkMode', 'true');
 		</script>
 
 		<script lang="ts" nonce="%sveltekit.nonce%">
@@ -42,6 +42,11 @@
 			as="style"
 		/>
 
+		<script
+			src="https://elevenlabs.io/player/audioNativeHelper.js"
+			defer
+			type="text/javascript"
+		></script>
 		%sveltekit.head%
 	</head>
 
