added defer to scripts

--- a/src/app.html
+++ b/src/app.html
@@ -33,7 +33,7 @@
 		</script>
 
 		<script src="https://www.googletagmanager.com/gtag/js?id=G-LLGJWF9DHW" defer></script>
-		<script nonce="%sveltekit.nonce%">
+		<script nonce="%sveltekit.nonce%" defer>
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
 				dataLayer.push(arguments);
