--- a/src/app.html
+++ b/src/app.html
@@ -43,11 +43,11 @@
 			gtag('config', 'G-LLGJWF9DHW');
 		</script>
 
-		<link
+		<!-- <link
 			rel="preload"
 			href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap"
 			as="style"
-		/>
+		/> -->
 
 		<script
 			src="https://elevenlabs.io/player/audioNativeHelper.js"
